# kaspersky_hackathon

./: .gitignore  Dockerfile  README.md  control.py
alphabot/: CMakeLists.txt  result.txt
alphabot/einit/: CMakeLists.txt
alphabot/einit/src/: init.yaml.in  security.psl
alphabot/resources/cdl/: Printnum.cdl
alphabot/resources/edl/: Showapp.edl  Subscriber.edl
alphabot/resources/idl/: Printnum.idl
alphabot/showapp/: CMakeLists.txt
alphabot/showapp/src/: Motor.hpp  main.cpp  showapp.cpp
alphabot/subscriber/: CMakeLists.txt
alphabot/subscriber/src/: main.cpp  subscriber.cpp  subscriber.h
gpio_test/: CMakeLists.txt
gpio_test/client/: CMakeLists.txt
gpio_test/client/src/: Motor.h  Motor_steps.h  gpio.c  main.cpp
gpio_test/einit/: CMakeLists.txt
gpio_test/einit/src/: security.psl.in
hello/: README.md  expected_output  results.txt
hello/hello/src/: hello.c
mosquitto/: README.md  broker.config
mosquitto/mqtt_subscriber/: README.md  results.txt
mosquitto/mqtt_subscriber/subscriber/src/: subscriber.cpp
